--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-preset-env": "^1.6.0",
-    "bip32-utils": "^0.10.0",
-    "bitcoinjs-lib": "^3.1.1",
-    "bluebird": "^3.5.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "babel-preset-env": "^1.7.0",
+    "bip32-utils": "^0.10.2",
+    "bitcoinjs-lib": "^3.3.2",
+    "bitgo-utxo-lib": "git+https://github.com/zerocurrencycoin/bitgo-utxo-lib.git",
+    "bluebird": "^3.5.3",
+    "bootstrap": "^4.1.3",
     "bs58": "^4.0.1",
-    "bs58check": "^2.0.2",
+    "bs58check": "^2.1.2",
     "btczjs": "^1.0.0",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.4",
+    "classnames": "^2.2.6",
+    "create-hash": "^1.1.3",
     "file-loader": "^0.11.2",
-    "file-saver": "^1.3.3",
+    "file-saver": "^1.3.8",
     "fs": "^0.0.1-security",
-    "hash.js": "^1.1.3",
+    "hash.js": "^1.1.7",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "qrcode.react": "^0.7.1",
-    "react": "^15.6.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-addons-transition-group": "^15.6.0",
-    "react-bootstrap": "^0.31.1",
+    "react": "^15.6.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.31.5",
     "react-copy-to-clipboard": "^5.0.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-icons": "^2.2.5",
-    "react-table": "^6.5.3",
+    "react-table": "^6.8.6",
     "reactstrap": "^4.8.0",
     "style-loader": "^0.18.2",
     "throttled-queue": "^1.0.4",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.3"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4"
+    "css-loader": "^0.28.11"
   }
 }
